* Implemented FR 2880756 [ERDesignerNG] Allow copying of entities and views
* Implemented FR 3413307 [ERDesignerNG] Error changing view 2D -> 3D
* Implemented FR 2895223 [ERDesignerNG] SubjectAreas handling
* Implemented FR 3413009 [ERDesignerNG] Show only the appropriate main-nodes in tree
* Implemented FR 3414698 [ERDesignerNG] let CTRL+Mousewheel zoom diagram
* Implemented FR 3412908 [ERDesignerNG] Reverse engineer Details of UDTs
* Bug Fixing 2899094 [ERDesignerNG] select first *non-system* schema in RevEngEd (re-introduced by buggy commit in v1072)
* Bug Fixing 2975206 [ERDesignerNG] Unknown data type during revers engineering
* Bug Fixing 3306174 [ERDesignerNG] Unknown datatype (2.7.0 release)
* Bug Fixing 3184767 [ERDesignerNG] SQL server 2008 reengineering exception
* Bug Fixing 3161426 [ERDesignerNG] Error saving/loading projet
* Bug Fixing 3317547 [ERDesignerNG] Error during RevEnging Postgres-DB ('Cannot find table in model')
* Bug Fixing 3413026 [ERDesignerNG] the new 3D view does not support loops
* Bug Fixing 3416991 [ERDesignerNG] behaviour (de)selecting objects in diagram
* Bug Fixing 3414627 [ERDesignerNG] SubjectArea issues
* Bug Fixing 3420950 [ERDesignerNG] DomainEditor: comments not stored
* Bug Fixing 3420937 [ERDesignerNG] PostgreSQL: comments of domains not RevEnged
* Bug Fixing 3426409 [ERDesignerNG] Recent builds won't install on Windows Server 2008 R2 x64
* Bug Fixing 3429294 [ERDesignerNG] Cannot Delete Comment
* Working on support for Spatial Datatypes & Fulltext indexes
* Added support for model validation & quick fixes
* Added support for anaglyphic 3d mode
* Improved usability of table editor
* Improved usability of domain editor
* Added support for crowfoot notation
* Added usage data collector
* Bug Fixing 3547370 [ERDesignerNG] i can't open prederence
* Bug Fixing 3546245 [ERDesignerNG] NUMBER type without fraction -> error
* Bug Fixing 3438699 [ERDesignerNG] NoClassError at creating documentation